# masters_thesis

./: .gitignore  4.2.0  README.md  README.txt  model_compare.ipynb  model_compare_kidney2.ipynb  model_compare_kidney3_sparse.ipynb  models.py  test_reconstruction.py  train.py  train.txt  train_patche_low_memory.py  train_patches.py  train_test.ipynb
cpp_reconstruction/: CMakeLists.txt  contour.cpp  flying.cpp  fyling_preds_from_mmap.cpp  mc.cpp  mc_openvdb.cpp
plots/: 3d_volume_buildup.cont  3d_volume_buildup.pmpd  3d_volume_buildup.tmb  3d_volume_buildup_highlighted.cont  3d_volume_buildup_highlighted.tmb  animation.cont  animation.tmb  volume_animation.cont  volume_animation.tmb
src/: animate.py  data_prepare.py  inference.ipynb  model_compare.ipynb  model_compare_final.ipynb  models-definitions.py  preprocess_test.ipynb  reconstruction.ipynb  reconstructionv2_and_vis.ipynb  train.py  train_2.5d.py  train_patche_low_memory.py  train_patches.py
